--- a/paper/figure.tex
+++ b/paper/figure.tex
@@ -36,4 +36,5 @@
     \caption{Overview of our clustering pipeline.}
     \label{fig:pipeline}
 \end{figure}
+\pe{ s/Market Segments/Local Clusters; Market segment seems to be defined as segmenting your customer base \href{https://en.wikipedia.org/wiki/Market_segmentation}{wiki market segmentation}}
 
